# keepsake

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  README.zh.md  pyproject.toml  test_skip_patterns.py
cron/: dedup-memory.sh  discover-synonyms.py  memory-maintenance.py
hermes-plugin/: __init__.py  plugin.yaml
scripts/: dedup_fragments.py  dedup_memory.py  discover_synonyms.py  progress-push.py
src/fragmented_memory/: __init__.py  attention.py  consolidator.py  embedder.py  forgetter.py  splitter.py  storage.py
src/keepsake/: __init__.py  attention.py  embedder.py  emotion.py  forgetter.py  splitter.py  storage.py
