[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fragmented-memory"
version = "2.1.0"
description = "Full-entry memory system for Hermes Agent — automatically retrieve relevant memories and inject complete context into conversations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "j-zly"},
]
keywords = ["hermes-agent", "memory", "rag", "redisearch", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "redis>=5.0",
    "jieba>=0.42",
]

[tool.setuptools]
packages.find = {where = ["src"]}
include-package-data = true
