[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keepsake-memory"
version = "1.1.0"
description = "Keepsake — full-entry memory system for Hermes Agent. On-demand storage of complete memories with semantic search."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "j-zly"},
]
keywords = ["hermes-agent", "memory", "rag", "redisearch", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "redis>=5.0",
    "jieba>=0.42",
]

[tool.setuptools]
packages.find = {where = ["src"]}
include-package-data = true
